# property-based-testing-grader

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in.py  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py
docs/API/: advanced_grader.rst  basic_grader.rst  index.rst  property_based_grader.rst
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: data_structures_example.rst  index.rst  sorting_example.rst
src/: __init__.py  advanced_grader.py  ast_grader.py  basic_grader.py  io_grader.py  performance_grader.py  plagiarism_detector.py  property_based_grader.py  utils.py  weighted_grader.py
tests/: __init__.py  conftest.py  test_basic_grader.py  test_integration.py  test_property_based_grader.py
